--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="logo">
-            <img src="images/thebatman.png" alt="">
+            <img src="images/thebatman.png" alt="thebatman_logo">
         </div>
         <div class="text">
         <p id="days"></p>
