--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
 </head>
 <body>
     <main>
-        <div class="logo">
-            <img src="images/thebatman.png" alt="thebatman_logo">
+        <div class="hero">
+            <div class="hero-text-batman">
+                <h1>The Batman: Part ll</h1>
+            </div>
+            <div class="hero-text">
+                <p id="days"></p>
+                <p id="hours"></p>
+                <p id="mins"></p>
+                <p id="secs"></p>
+                <h2 id="end"></h2>
+            </div>
+            <div class="date">
+                <h3>
+                    October 3, 2025
+                </h3>
+            </div>
         </div>
-        <div class="text">
-        <p id="days"></p>
-        <p id="hours"></p>
-        <p id="mins"></p>
-        <p id="secs"></p>
-        <h2 id="end"></h2>
-    </div>
     </main>
 </body>
 </html>
+
+
+
+
+<!-- <div class="text">
+    <p id="days"></p>
+    <p id="hours"></p>
+    <p id="mins"></p>
+    <p id="secs"></p>
+    <h2 id="end"></h2>
+</div> -->
